[gd_scene load_steps=16 format=3 uid="uid://d4gps7o3bnsab"]

[ext_resource type="Script" uid="uid://da0tek8bm5c0e" path="res://Menus/Options Menu/settings_tab_container.gd" id="1_4vbn5"]
[ext_resource type="PackedScene" uid="uid://b25uauf2yoa3p" path="res://Menus/Options Menu/General Buttons/Difficulty_button.tscn" id="2_228l2"]
[ext_resource type="PackedScene" uid="uid://bqgn6vb0ertql" path="res://Menus/Options Menu/Audio Buttons/audio_slider_settings.tscn" id="2_r6t11"]
[ext_resource type="PackedScene" uid="uid://bsblvw4g5l27a" path="res://Menus/Options Menu/Graphics Buttons/window_mode_button.tscn" id="2_tjuj2"]
[ext_resource type="PackedScene" uid="uid://c6krt4b8h7q0b" path="res://Menus/Options Menu/General Buttons/autofire_slider.tscn" id="3_685rw"]
[ext_resource type="PackedScene" uid="uid://bdd7owj61hs57" path="res://Menus/Options Menu/General Buttons/Challenge_Types.tscn" id="3_bl6fx"]
[ext_resource type="PackedScene" uid="uid://k1qtjx2tcygi" path="res://Menus/Options Menu/Graphics Buttons/resultion_mode_button.tscn" id="3_gdxlt"]
[ext_resource type="PackedScene" uid="uid://cp51gy1cclid3" path="res://Menus/Options Menu/Accessiblity Buttons/simple_Kong_button.tscn" id="4_6ncul"]
[ext_resource type="PackedScene" uid="uid://bwcvqn42nt4v1" path="res://Menus/Options Menu/General Buttons/reset_score_button.tscn" id="4_f8aa0"]
[ext_resource type="PackedScene" uid="uid://cx0yotwkyqmeh" path="res://Menus/Options Menu/Accessiblity Buttons/custom_cursor_button.tscn" id="7_ar26x"]
[ext_resource type="PackedScene" uid="uid://cnai6vvnj7i66" path="res://Menus/Options Menu/Accessiblity Buttons/mobile_buttons.tscn" id="8_e8pla"]
[ext_resource type="AudioStream" uid="uid://lwyvvhiw417g" path="res://sounds/sound effects/enivornment/boom.wav" id="8_epnk3"]
[ext_resource type="PackedScene" uid="uid://dtlaiw01exmj3" path="res://Menus/Options Menu/Accessiblity Buttons/auto_fire_toggle_button.tscn" id="9_amb08"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu0fm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_481ea"]
HSeparator/styles/separator = SubResource("StyleBoxFlat_wu0fm")

[node name="Settings_Tab_Container" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vbn5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 1

[node name="General" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
focus_neighbor_right = NodePath("../Sound")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/General"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/General/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/General/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Diffculty_button" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_228l2")]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="challenge_type" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_bl6fx")]
layout_mode = 2

[node name="HSeparator5" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="Autofire_option" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_amb08")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="autofire_rate_slider" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_685rw")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="Simple_Kong_option" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_6ncul")]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="Customcursor_option" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("7_ar26x")]
layout_mode = 2

[node name="HSeparator7" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="HSeparator6" type="HSeparator" parent="TabContainer/General/MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_481ea")
theme_override_constants/separation = 50

[node name="Sound" type="TabBar" parent="TabContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../Graphics")
focus_neighbor_bottom = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Audio_Slider_Settings")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Audio_Slider_Settings" parent="TabContainer/Sound/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_r6t11")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../Audio_Slider_Settings2")
focus_next = NodePath("../Audio_Slider_Settings2")

[node name="Audio_Slider_Settings2" parent="TabContainer/Sound/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_r6t11")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Audio_Slider_Settings3")
focus_next = NodePath("../Audio_Slider_Settings3")
bus_name = "Music"

[node name="Audio_Slider_Settings3" parent="TabContainer/Sound/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_r6t11")]
layout_mode = 2
bus_name = "Sfx"

[node name="Audio_Slider_Settings4" parent="TabContainer/Sound/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_r6t11")]
layout_mode = 2
bus_name = "Gun"

[node name="Graphics" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("MarginContainer/ScrollContainer/VBoxContainer/Window_Mode_Button")
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Graphics/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="Window_Mode_Button" parent="TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_tjuj2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Resultion_Mode_Button" parent="TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_gdxlt")]
unique_name_in_owner = true
layout_mode = 2

[node name="mobile_option" parent="TabContainer/Graphics/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("8_e8pla")]
layout_mode = 2

[node name="Reset Settings" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Reset Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Reset Settings/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Reset Settings/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="reset_score_button" parent="TabContainer/Reset Settings/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("4_f8aa0")]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2

[node name="default_settings" type="Button" parent="TabContainer/Reset Settings/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "Reset Settings to Default"

[node name="erase_all" type="Button" parent="TabContainer/Reset Settings/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "Reset and Erase All"

[node name="unlock_delay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="sound_player" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("8_epnk3")
volume_db = 8.0

[node name="sfx_test_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_epnk3")
volume_db = 8.0

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="pressed" from="TabContainer/Reset Settings/MarginContainer/ScrollContainer/VBoxContainer/reset_score_button" to="." method="_on_reset_score_button_pressed"]
[connection signal="pressed" from="TabContainer/Reset Settings/MarginContainer/ScrollContainer/VBoxContainer/default_settings" to="." method="_on_settings_default_pressed"]
[connection signal="pressed" from="TabContainer/Reset Settings/MarginContainer/ScrollContainer/VBoxContainer/erase_all" to="." method="_on_erase_all_pressed"]
[connection signal="timeout" from="unlock_delay" to="." method="_on_unlock_delay_timeout"]
